trying to fix citations wrapping to next line when after a glossary-enabled term

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -2587,6 +2587,8 @@ body.ifc-resource-browser--panel-open {
 }
 
 .ifc-faq-entry {
+  position: relative;
+  padding-bottom: 3.6rem;
   scroll-margin-top: 7.5rem;
 }
 
